--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,6 @@
-<header>
+<header class="site-header">
+
+<img src="assets/filippo/avatar_bg_white_small.png" class="avatar hvr-wobble-horizontal no-margin">
+<span><strong>Filippo Corti</strong></span>
 
 </header>
