--- a/css/main.scss
+++ b/css/main.scss
@@ -6,5 +6,9 @@
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "gutenberg"
+        "gutenberg",
+        "header",
+        "layout",
+        "animations",
+        "utilities"
 ;
