Add home layout, header style and custom typography

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,15 @@
 <header class="site-header">
 
-<img src="assets/filippo/avatar_bg_white_small.png" class="avatar hvr-wobble-horizontal no-margin">
-<span><strong>Filippo Corti</strong></span>
+  <div class="wrapper">
 
+    <div class="header__section">
+      <img src="assets/filippo/avatar_bg_white_small.png" class="avatar hvr-wobble-horizontal no-margin">
+    </div>
+
+    <nav class="header__section">
+      <a href="">blog</a>
+      <a href="">links</a>
+    </nav>
+
+  </div>
 </header>
