--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,7 +1,60 @@
 .site-header {
-  padding: 1em;
+  padding: 1em 0;
+  margin-bottom: 2em;
+  text-transform: uppercase;
+  background: #fcfcfc;
+  border-bottom: 1px solid #fafafa;
+  max-width: 100%;
 
   .avatar {
-    max-width: 5em;
+    max-width: 3em;
   }
+
+  .wrapper {
+    max-width: 35em;
+    display: flex;
+    justify-content:space-around;
+    margin-bottom: 0;
+  }
+
+}
+
+
+
+/*------------------------------------*\
+  #HEADER
+\*------------------------------------*/
+
+
+.header__section {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0;
+
+  &:first-child {
+    margin-left: 0;
+  }
+
+  &:last-child {
+    margin-right: 0;
+  }
+
+  a {
+    margin: 0 0.9em;
+    font-family: "Nitti Grotesk";
+    text-decoration: none;
+    font-size: 0.9em;
+
+    &:visited, &:active {
+      color: #b1b1b1;
+    }
+
+    &:hover {
+      color: #fc4b00;
+      border-bottom: 1px solid #fc4b00;
+
+    }
+
+  }
+
 }
