--- a/_sass/gutenberg/_gutenberg-config.scss
+++ b/_sass/gutenberg/_gutenberg-config.scss
@@ -4,18 +4,18 @@
 $edit-mode: true; // [ true / false ] - Enables/disables the grid toggle button.
 
 // Theme / Fonts
-$theme: OpenSans; // [ Merriweather / OpenSans / custom ]
-$custom-font-body: null !default; // [ "Libre Baskerville", Georgia, serif ]
-$custom-font-headings: null !default;
+$theme: custom; // [ Merriweather / OpenSans / custom ]
+$custom-font-body: "Nitti Grotesk"; // [ "Libre Baskerville", Georgia, serif ]
+$custom-font-headings: "Nitti Grotesk Medium" !default;
 
 // Paragraph indenting
 $paragraph-indent: false; // [ true / false ]
 
 // Base sizes
 $base-font-size: 100 !default; // In %. Also used for mobile. Number only, no units.
-$base-font-size-desktop: 112.5 !default; // In %. Used to calculate the desktop font size. Number only, no units.
+$base-font-size-desktop: 115 !default; // In %. Used to calculate the desktop font size. Number only, no units.
 $line-height: 1.625;
-$line-height-desktop: 1.7;
+$line-height-desktop: 1.8;
 $max-width: 35; // Number only, no units. Gets converted to REMs and pixels.
 
 // Modular Scale
@@ -57,15 +57,7 @@ $leading-rem-desktop: $leading-desktop / $base-desktop;
 $font-body: null;
 $font-headings: null;
 
-@if $theme == Merriweather {
-
-  // Import Merriweather
-  @import url(https://fonts.googleapis.com/css?family=Merriweather:400,700,400italic);
-
-  // Set body font
-  $font-body: Merriweather, Georgia, serif;
-
-} @else if $theme == OpenSans {
+@if $theme == OpenSans {
 
   // Import Open Sans
   @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic);
