--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,7 @@
     </div>
 
     <nav class="header__section">
+      <a href="" class="active">home</a>
       <a href="">blog</a>
       <a href="">links</a>
     </nav>
