--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,9 +7,9 @@
     </div>
 
     <nav class="header__section">
-      <a href="" class="active">home</a>
-      <a href="">blog</a>
-      <a href="">links</a>
+      <a href="/" class="active">home</a>
+      <a href="http://bicyclemind.it">blog</a>
+      <a href="http://dostoevskij.net">links</a>
     </nav>
 
   </div>
