--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 
   {% include head.html %}
 
@@ -8,9 +8,7 @@
     {% include header.html %}
 
     <div class="page-content">
-      <div class="wrapper">
         {{ content }}
-      </div>
     </div>
 
     {% include footer.html %}
