Add library collection with initial layout

--- a/css/main.scss
+++ b/css/main.scss
@@ -17,5 +17,6 @@ $background-color:      #fcfcfc;
         "layout",
         "header",
         "animations",
+        "bookshelf",
         "utilities"
 ;
