Improve library layout

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,8 +8,8 @@
 
     <nav class="header__section">
       <a href="/" class="active">home</a>
+      <a href="/library">bookshelf</a>
       <a href="http://bicyclemind.it">blog</a>
-      <a href="http://dostoevskij.net">links</a>
     </nav>
 
   </div>
