Add new books to library

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,12 @@
   <div class="wrapper">
 
     <div class="header__section">
-      <img src="assets/filippo/avatar_bg_white_small.png" class="avatar hvr-wobble-horizontal no-margin">
+      <a href="/" class="no-margin">
+        <img src="assets/filippo/avatar_bg_white_small.png" class="avatar hvr-wobble-horizontal no-margin">
+      </a>
     </div>
 
-    <nav class="header__section">
-      <a href="/" class="active">home</a>
+    <nav class="header__section header__nav">
       <a href="/library">bookshelf</a>
       <a href="http://bicyclemind.it">blog</a>
     </nav>
