--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -36,7 +36,7 @@
   }
 
   &.header__nav a {
-    font-family: "Nitti Grotesk Medium";
+    font-weight: 600;
     font-size: 0.9em;
     letter-spacing: 0.05em;
     text-decoration: none;
