--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -48,12 +48,16 @@ a {
 
   .section__content {
     font-size: 1.2em;
-    font-family: "Nitti Grotesk Light";
+    font-weight: 300;
     margin: auto 0 0 auto;
     flex: 6;
 
+    @media screen and (max-width: $small-screen) {
+      margin: 0;
+    }
+
     a, strong {
-      font-family: "Nitti Grotesk Medium";
+      font-weight: 600;
     }
 
     p {
