--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,10 @@ $background-color:      #fcfcfc;
 // Screen sizes
 $small-screen:          667px;
 
+// Fonts
+
+$primary-font:         "Nitti Grotesk", "Helvetica Neue", "Helvetica", sans-serif;
+
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
