Minor fixes to CSS

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -5,7 +5,7 @@
 .site-header {
   background: $background-color;
   padding: 1em 0;
-  border-bottom: 1px solid #fafafa;
+  border-bottom: 1px solid #e1e1e1;
   margin-bottom: 2em;
   max-width: 100%; /* reset max-width */
 
