--- a/css/main.scss
+++ b/css/main.scss
@@ -9,7 +9,7 @@ $main-text-color:       #424242;
 $accent-color:          #fc4b00;
 $link-color:            #00a071;
 $light-color:           #b1b1b1;
-$background-color:      #fcfcfc;
+$background-color:      #f7f7f7;
 
 // Screen sizes
 $small-screen:          667px;
@@ -26,5 +26,6 @@ $primary-font:         "Nitti Grotesk", "Helvetica Neue", "Helvetica", sans-seri
         "header",
         "animations",
         "bookshelf",
+        "footer",
         "utilities"
 ;
