--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,9 @@
 
   <link href="//cloud.webtype.com/css/f915bf03-f9e0-44ec-8ee4-e2be65a9864d.css" rel="stylesheet" type="text/css" />
 
+  <link rel="shortcut icon" href="assets/filippo/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="assets/filippo/favicon.ico" type="image/x-icon">
+
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
