--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -70,6 +70,11 @@ a {
         font-size: 0.8em;
         position: relative;
         top: -2px;
+
+        @media screen and (max-width: $small-screen) {
+          display: none;
+        }
+
       }
 
     }
