Fix responsive issues on library page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,13 @@
 
   {% include head.html %}
 
-  <body>
+  <body class="page-{{ page.title }}">
 
     {% include header.html %}
 
+    <div class="content-{{ page.title }}">
     {{ content }}
+    </div>
 
     {% include footer.html %}
 
