--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,14 +12,13 @@ a {
 }
 
 
-.attention-grabber {
+.attention-grabber, .content-library {
 
   @media screen and (max-width: $small-screen) {
     padding: 0 1.5em;
   }
 
 }
-
 
 /*------------------------------------*\
   #HOME
