Better CSS, add mixin for media queries

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,11 @@
 
   {% include head.html %}
 
-  <body class="page-{{ page.title }}">
+  <body class="page-{{ page.id }}">
 
     {% include header.html %}
 
-    <div class="content-{{ page.title }}">
+    <div class="content-{{ page.id }} full-screen">
     {{ content }}
     </div>
 
