--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -42,6 +42,7 @@
     text-decoration: none;
     text-transform: uppercase;
     margin: 0 0.8em;
+    color: $light-color;
 
     &:visited, &:active {
       color: $light-color;
