--- a/css/main.scss
+++ b/css/main.scss
@@ -16,6 +16,7 @@ $small-screen:          667px;
 
 // Utilities
 $spacing-unit:          30px;
+$mobile-margin:         1.5em;
 
 // Fonts
 $primary-font:         "Nitti Grotesk", "Helvetica Neue", "Helvetica", sans-serif;
