--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,4 +24,8 @@
     _gs('GSN-849283-Q');
   </script>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="js/typed.js"></script>
+  <script src="js/scripts.js"></script>
+
 </head>
