--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -10,6 +10,14 @@
   font-weight: 600;
 }
 
+.text-regular {
+  font-weight: 400;
+}
+
+.text-center {
+  text-align: center;
+}
+
 
 .grayscale {
   -webkit-filter: grayscale(1);
