--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,7 +12,7 @@ a {
 }
 
 
-.attention-grabber, .content-library {
+.home-intro, .content-library {
 
   @include media-query($small-screen) {
     padding: 0 $mobile-margin;
@@ -22,6 +22,7 @@ a {
 
 ::-moz-selection { background: rgba(0, 160, 113, 0.2); }
 ::selection { background: rgba(0, 160, 113, 0.2); }
+
 
 
 
@@ -82,4 +83,37 @@ a {
 
     }
   }
+}
+
+
+
+
+/*------------------------------------*\
+  #NOTES
+\*------------------------------------*/
+
+.notes {
+  .article-body p:nth-child(1) {
+    @extend .attention-grabber;
+  }
+}
+
+
+
+
+/*------------------------------------*\
+  #404
+\*------------------------------------*/
+
+.page-404 {
+  text-align: center;
+  padding: 2em 0;
+  background: lighten($link-color, 55%);
+  color: darken($link-color, 10%);
+  font-size: 2rem;
+
+  .avatar {
+    max-width: 7em;
+  }
+
 }
