Add work/CV page and instagr.am to home page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     {% include header.html %}
 
-    <div class="content-{{ page.id }} full-screen">
+    <div class="content-{{ page.id }} content full-screen">
     {{ content }}
     </div>
 
