--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   <link href="//cloud.webtype.com/css/f915bf03-f9e0-44ec-8ee4-e2be65a9864d.css" rel="stylesheet" type="text/css" />
-
+  <link href="//cloud.webtype.com/css/6be66f54-5311-40aa-8793-1445928e5ec6.css" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="assets/filippo/favicon.ico" type="image/x-icon">
   <link rel="icon" href="assets/filippo/favicon.ico" type="image/x-icon">
 
@@ -26,6 +26,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="js/typed.js"></script>
+  <script src="js/instafeed.min.js"></script>
   <script src="js/scripts.js"></script>
 
 </head>
