--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -5,9 +5,9 @@
 .site-header {
   background: $background-color;
   padding: 1em 0;
-  border-bottom: 1px solid #e1e1e1;
   margin-bottom: 2em;
   max-width: 100%; /* reset max-width */
+  font-family:  $secondary-font;
 
   .avatar {
     max-width: 3em;
@@ -37,7 +37,7 @@
 
   &.header__nav a {
     font-weight: 600;
-    font-size: 0.9em;
+    font-size: 0.8em;
     letter-spacing: 0.05em;
     text-decoration: none;
     text-transform: uppercase;
