--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -30,6 +30,20 @@ a {
   #HOME
 \*------------------------------------*/
 
+.page-home {
+
+    #instafeed {
+      display: flex;
+      flex-flow: wrap;
+      margin: 5em auto;
+
+      img {
+        margin: 0 0.5em;
+        max-width: 120px;
+      }
+    }
+}
+
 .section-list {
   display: flex;
   align-items: flex-start;
@@ -116,4 +130,19 @@ a {
     max-width: 7em;
   }
 
+}
+
+
+
+/*------------------------------------*\
+  Alternative layout
+\*------------------------------------*/
+
+.raised {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.10), 0 3px 6px rgba(0,0,0,0.03);
+  max-width: 45em;
+  position: relative;
+  top: -125px;
+  background: #fff;
+  padding: 2em 0;
 }
