--- a/css/main.scss
+++ b/css/main.scss
@@ -33,5 +33,6 @@ $secondary-font:       "Input Mono";
         "animations",
         "bookshelf",
         "work",
+        "home",
         "footer"
 ;
