--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -39,13 +39,14 @@
 }
 
 .grayscale {
-  -webkit-filter: grayscale(1);
+  filter: grayscale(1);
+  transition: all 1s ease;
+
 
   &:hover {
-    -webkit-filter: grayscale(0);
+    filter: grayscale(0);
   }
 }
-
 
 
 // Behaviour
