Add contact me page and new homepage header

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
 <footer class="footer">
-
+  <span class="icon-macintosh icon"></span>
 </footer>
+
+<script src="{{site.baseurl}}/js/scripts.js"></script>
