--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
 
-  <div class="wrapper">
+  <div class="wrapper no-margin-bottom">
 
     <div class="header__section">
       <a href="/" class="no-margin">
