--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,8 +26,9 @@
   </script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script src="js/typed.js"></script>
-  <script src="js/instafeed.min.js"></script>
-  <script src="js/scripts.js"></script>
+  <script src="{{site.baseurl}}/js/typed.js"></script>
+  <script src="{{site.baseurl}}/js/instafeed.min.js"></script>
+
+  <script type="text/javascript" src="https://rawgit.com/space10-community/conversational-form/master/dist/conversational-form.min.js" crossorigin></script>
 
 </head>
