--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -4,39 +4,57 @@
 
 .page-home {
 
+  .site-header {
+    margin-bottom: 0;
+  }
+
+  .home-intro {
+    background: $background-color;
+    padding: $spacing-unit 0;
+
+    @include media-query($small-screen) {
+      padding: $spacing-unit;
+    }
+
+  }
+
   figure {
-    max-width: 70%;
+    max-width: $larger;
   }
 
-  .icon {
-    margin-left: 5px;
-    position: relative;
-    top: 5px;
-  }
+  .featured-links {
+    text-align: center;
+    margin: 0 0 $spacing-unit;
+    padding: $spacing-unit*2;
+    display: flex;
+    background: $background-color;
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 
-    #instafeed {
-      display: flex;
-      flex-flow: wrap;
-      margin: 5em auto;
 
-      a {
-        margin: 0 0.3em 0.3em 0;
-        display: inline-block;
-        overflow: hidden;
+    a {
+      text-decoration: none;
+      color: $main-text-color;
+      transition: all .2s ease-in-out;
 
-      }
+      &:hover {
+        transform: scale(1.2);
+        color: $accent-color;
 
-      img {
-        max-width: 100px;
-        margin: 0;
-        transition: all .2s ease;
-        vertical-align: middle;
-
-        &:hover {
-          transform: scale(1.5);
+        path {
+          fill: $accent-color;
         }
       }
     }
+
+    .featured-links__title {
+      display: block;
+    }
+
+    svg {
+      height: 30px;
+      margin-bottom: 0;
+    }
+  }
 
   .section-list {
     display: flex;
@@ -48,19 +66,19 @@
       padding: 0 $mobile-margin;
     }
 
-    .section__title {
+    .section-list__title {
       width: 20%;
       margin: 0.3em 6em 0 2em;
       border-top: 2px solid #222;
       text-align: right;
 
       @include media-query($small-screen) {
-        margin-bottom: 1em;
+        margin: 0 0 $spacing-unit 0;
       }
 
     }
 
-    .section__content {
+    .section-list__content {
       font-weight: 300;
       margin: auto 0 0 auto;
       width: 80%;
@@ -76,7 +94,35 @@
       p {
         margin-bottom: 0.4em;
       }
-      
+
     }
   }
+
+  #instafeed {
+    display: flex;
+    flex-flow: wrap;
+    justify-content: center;
+    margin: 5em auto;
+    max-width: 45em;
+
+    a {
+      margin: 0 0.3em 0.3em 0;
+      display: inline-block;
+      overflow: hidden;
+
+    }
+
+    img {
+      margin: 0;
+      border-radius: 1px;
+      max-width: 120px;
+      transition: all .2s ease;
+      vertical-align: middle;
+
+      &:hover {
+        transform: scale(1.5);
+      }
+    }
+  }
+
 }
