--- a/css/main.scss
+++ b/css/main.scss
@@ -12,12 +12,16 @@ $link-color:              #00a071;
 $light-color:             #b1b1b1;
 $background-color:        #f7f7f7;
 
+$grey-900:                #212121;
+$grey-300:                #E0E0E0;
+
 // Screen sizes
 $small-screen:          667px;
 
 // Utilities
 $spacing-unit:          30px;
 $mobile-margin:         1.5em;
+$larger:                70%;
 
 // Fonts
 $primary-font:         "Nitti Grotesk", "Helvetica Neue", "Helvetica", sans-serif;
@@ -31,6 +35,7 @@ $secondary-font:       "Input Mono";
         "layout",
         "header",
         "animations",
+        "contact",
         "bookshelf",
         "work",
         "home",
