Improve home on smartphones and footer layout

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,14 @@
 <footer class="footer">
-  <span class="icon-macintosh icon"></span>
+  <p class="no-margin-bottom">
+    <span class="icon-macintosh icon hvr-wobble-horizontal no-margin-bottom"></span>
+    <br />
+    &copy; 2005<script>new Date().getFullYear()>2005&&document.write("-"+new Date().getFullYear());</script>, Filippo Corti.
+
+  <a href="">Colophon</a> •
+  <a href="">me@filippocorti.net</a> •
+  <a href="">@philapple</a>
+
+  </p>
 </footer>
 
 <script src="{{site.baseurl}}/js/scripts.js"></script>
