Make all pages responsive

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,9 @@
     <br />
     &copy; 2005<script>new Date().getFullYear()>2005&&document.write("-"+new Date().getFullYear());</script>, Filippo Corti.
 
-  <a href="">Colophon</a> •
-  <a href="">me@filippocorti.net</a> •
-  <a href="">@philapple</a>
+  <a href="../colophon">Colophon</a> •
+  <a href="../hi">me@filippocorti.net</a> •
+  <a href="http://twitter.com/philapple">@philapple</a>
 
   </p>
 </footer>
