--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,8 +9,8 @@
   <link href="//cloud.webtype.com/css/f915bf03-f9e0-44ec-8ee4-e2be65a9864d.css" rel="stylesheet" type="text/css" />
   <link href="https://file.myfontastic.com/qywfA4ZMUeXpHkQt99X3L5/icons.css" rel="stylesheet">
 
-  <link rel="shortcut icon" href="assets/filippo/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="assets/filippo/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="{{ site.url }}/assets/filippo/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="{{ site.url }}/assets/filippo/favicon.ico" type="image/x-icon">
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
