Add colophon page, redesign 404 and contact page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
-  <p class="no-margin-bottom">
+  <p class="no-margin-bottom larger">
     <span class="icon-macintosh icon hvr-wobble-horizontal no-margin-bottom"></span>
     <br />
-    &copy; 2005<script>new Date().getFullYear()>2005&&document.write("-"+new Date().getFullYear());</script>, Filippo Corti.
+    <i class="icon-cc icon"></i> 2005<script>new Date().getFullYear()>2005&&document.write("-"+new Date().getFullYear());</script>, Filippo Corti.
 
   <a href="../colophon">Colophon</a> •
   <a href="../hi">me@filippocorti.net</a> •
@@ -11,4 +11,4 @@
   </p>
 </footer>
 
-<script src="{{site.baseurl}}/js/scripts.js"></script>
+<script src="{{site.baseurl}}/js/scripts.js" defer></script>
