--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -13,10 +13,14 @@ a {
     color: $link-color;
   }
 
+  &:visited:hover, &:hover {
+    color: $accent-color;
+    background: #e9e5fa;
+  }
+
 }
 
-
-.home-intro, .content-library {
+.home-intro, .content-library, .content-colophon, .content-hi {
 
   @include media-query($small-screen) {
     padding: 0 $mobile-margin;
@@ -28,6 +32,10 @@ a {
 ::selection { background: rgba(0, 160, 113, 0.2); }
 
 
+.icon {
+  position: relative;
+  top: 2px;
+}
 
 
 /*------------------------------------*\
@@ -49,13 +57,60 @@ a {
 
 .page-404 {
   text-align: center;
-  padding: 2em 0;
+  padding: 6em 0;
   background: lighten($link-color, 55%);
-  color: darken($link-color, 10%);
+  color: #fff;
   font-size: 2rem;
+  background: $link-color url(https://media.giphy.com/media/hVKWqTEa36rm0/giphy.gif) no-repeat center center fixed;
+  background-size: cover;
+  max-height: 90vh;
+  animation: fadeIn 3s;
+
+  .error-message {
+    transform: rotate(-3deg);
+
+    & > span {
+      padding: 0.15em 0 0.3em;
+      background: rgba(255,255,255,0.1);
+      line-height: 2;
+    }
+
+    .kamojii {
+      font-size: 1.5em;
+      white-space: nowrap;
+      position: relative;
+      top: 5px;
+    }
+
+  }
+
+  .return-link {
+    a {
+      padding: 1em;
+      margin: 1.5em auto;
+      display: block;
+      transition-duration: 1s;
+
+      &:hover {
+        border: 1px solid #fff;
+        color: #fff;
+        background: none;
+      }
+    }
+
+  }
 
   .avatar {
-    max-width: 7em;
+    max-width: 2em;
+    position: absolute;
+    left: 30px;
+    top: 30px;
+    filter: grayscale(1);
+    transition-duration: 2s;
+
+    &:hover {
+      filter: grayscale(0);
+    }
   }
 
 }
