--- a/css/main.scss
+++ b/css/main.scss
@@ -8,7 +8,9 @@
 $main-text-color:         #424242;
 $secondary-text-color:    #2b00cf;
 $accent-color:            #2b00cf;
+$light-accent-color:      #e9e5fa;
 $link-color:              #00a071;
+$light-link-color:        #e7f6f1;
 $light-color:             #b1b1b1;
 $background-color:        #f7f7f7;
 
