--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -4,26 +4,34 @@
 
 .footer {
   margin: $spacing-unit*4 auto 0;
-  padding: 0 $spacing-unit*2 0.5em;
+  padding: 0 $spacing-unit*2 0;
   width: 100%;
   max-width: 100%;
   text-align: center;
-  background: #e9e5fa;
-  color: $grey-900;
+  background: $light-accent-color;
+  font-family: $secondary-font;
+  font-size: 0.7em;
 
   .icon-macintosh {
-    font-size: 2em;
+    font-size: 2.5em;
   }
 
   p {
     position: relative;
-    top: -15px;
+    top: -20px;
     color: $accent-color;
   }
 
   a {
-    color: $grey-900;
     color: $accent-color;
     font-weight: bold;
+
+    &:visited:hover, &:hover {
+      text-decoration: line-through;
+      background: none;
+      color: $accent-color;
+    }
+
   }
+
 }
