--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -4,10 +4,14 @@
 
 .site-header {
   background: $background-color;
-  padding: $spacing-unit 0;
-  margin-bottom: $spacing-unit*2;
+  padding: $spacing-unit/2 0;
+  margin-bottom: $spacing-unit;
   max-width: 100%; /* reset max-width */
   font-family:  $secondary-font;
+
+  a:visited:hover, a:hover {
+    background: none;
+  }
 
   .avatar {
     max-width: 3em;
@@ -77,7 +81,7 @@
       color: $light-color;
     }
 
-    &:hover, &.active {
+    &:hover, &.active, &:visited:hover {
       color: $accent-color;
     }
 
