--- a/_sass/_work.scss
+++ b/_sass/_work.scss
@@ -55,6 +55,10 @@
     a {
       text-decoration: none;
       border-bottom: 1px solid $link-color;
+
+      &:hover {
+        border-bottom: 1px solid $accent-color;
+      }
     }
   }
 
