--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -31,7 +31,6 @@
       padding: $mobile-margin;
     }
 
-
     a {
       text-decoration: none;
       color: $main-text-color;
@@ -53,11 +52,20 @@
 
     .featured-links__title {
       display: block;
+
+      @include media-query($small-screen) {
+        font-size: 0.85em;
+      }
     }
 
     svg {
       height: 60px;
       margin-bottom: 0;
+
+      @include media-query($small-screen) {
+        height: 25px;
+      }
+
     }
   }
 
@@ -109,6 +117,10 @@
     justify-content: center;
     margin: 5em auto;
     max-width: 45em;
+
+    @include media-query($small-screen) {
+      display: none;
+    }
 
     a {
       margin: 0 0.3em 0.3em 0;
